test/fail/ExportCheck/UndefinedName.curry
-- Should issue the following error:
--
-- test/exportcheck/UndefinedName.curry, line 6.23:
--     Undefined name `foo' in export list
--
module UndefinedName (foo) where
